# ISIE-SEM_Summer_School_2026

./: .gitignore  README  README.md  python-setup-guide.md  python_environment_check.ipynb
1_dMFA_Python_Intro_Stefan_Pauliuk/: Bath_dMFA_2026_Jupyter_Tips.ipynb  Bath_dMFA_2026_Software_1.ipynb  Bath_dMFA_2026_Software_1_Output_Multiple.xlsx  Bath_dMFA_2026_Software_1_Output_Single.xlsx  Bath_dMFA_2026_Software_2.ipynb  Bath_dMFA_2026_Software_2_Results.xlsx  Bath_dMFA_2026_Software_2_SampleSolution.ipynb  Bath_dMFA_2026_Software_3.ipynb  Bath_dMFA_2026_Software_3_Results.pkl  Bath_dMFA_2026_Software_3_Results.xlsx  Bath_dMFA_2026_Software_3_SampleSolution.ipynb  Bath_dMFA_2026_Software_4.ipynb  Bath_dMFA_2026_Software_4_Results.pkl  Bath_dMFA_2026_Software_4_SampleSolution.ipynb  Bath_dMFA_2026_Software_5.ipynb  (+1 more)
2_focus_groups/21_Monte-Carlo_Rick_Lupton/: README.md  pyproject.toml
2_focus_groups/21_Monte-Carlo_Rick_Lupton/full/: Bath_dMFA_2026_Software_6_Monte_Carlo_intro.ipynb  Bath_dMFA_2026_Software_6_Uncertainty.ipynb  Bath_dMFA_2026_Software_7_Future_Uncertainty.ipynb  Bath_dMFA_2026_Software_8_Dependence.ipynb  Bath_dMFA_2026_Software_9_Sensitivity.ipynb
2_focus_groups/21_Monte-Carlo_Rick_Lupton/quick_examples/: constrained_shares.ipynb  gold_content_student_t.ipynb
2_focus_groups/21_Monte-Carlo_Rick_Lupton/students/: Bath_dMFA_2026_Software_6_Monte_Carlo_intro.ipynb  Bath_dMFA_2026_Software_6_Uncertainty.ipynb  Bath_dMFA_2026_Software_7_Future_Uncertainty.ipynb  Bath_dMFA_2026_Software_8_Dependence.ipynb  Bath_dMFA_2026_Software_9_Sensitivity.ipynb
(+21 files in other folders)
